@@ -1,3 +1,12 @@
+2010-06-30  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (CANNOT_DUMP): Update for configure name change.
+
+	* s/freebsd.h (USE_MMAP_FOR_BUFFERS):
+	* s/irix6-5.h (USE_MMAP_FOR_BUFFERS):
+	* s/darwin.h (SYSTEM_MALLOC):
+	* s/sol2-10.h (SYSTEM_MALLOC): Move to configure.
+
 2010-06-29  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* nsfns.m: extern declare Vmenu_bar_mode, Vtool_bar_mode.
